# generative-midi-workbench

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  mkdocs.yml
backend/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_polyrhythms.py  003_polyrhythm_lanes.py  004_theory_overlay.py  005_mute_solo_consistency.py  006_offsets_chords.py  007_chord_projections.py  008_chords_expressive.py  009_add_track_solo.py  010_arrangement_cards.py  011_drum_maps.py  012_chord_timing_beats.py  013_chord_patterns_and_regen.py  014_chord_hit_mode_and_offset.py
backend/src/midinecromancer/: __init__.py  config.py  main.py
backend/src/midinecromancer/api/: __init__.py  arrangement.py  chord_events.py  chord_gen.py  chord_insert.py  chord_projections.py  chord_suggest.py  chords.py  clips.py  drum_maps.py  export.py  generation.py  main.py  polyrhythm_lanes.py  polyrhythms.py  projects.py  segments.py  suggestions.py  theory.py  tracks.py
backend/src/midinecromancer/db/: __init__.py  base.py
backend/src/midinecromancer/midi/: __init__.py  export.py  export_zip.py
backend/src/midinecromancer/models/: __init__.py  chord_event.py  chord_gen_run.py  chord_projection_profile.py  clip.py  clip_chord_settings.py  drum_map_profile.py  (+9 more)
backend/tests/: __init__.py  test_chord_timing.py  test_determinism.py  test_export_zip.py  test_offsets.py  test_polyrhythm.py  test_polyrhythm_lanes.py  test_regenerate.py  test_segments_generate.py  test_suggestions.py  test_theory.py
(+118 files in other folders)
